added (id=search-engine-optimization) so it directs you to that part of the page when clicking on the header, search-engine-optimization

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
 }
-
+/* Deleted background-color in body becasue it was already white */ 
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
